--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/apache"]
 	path = modules/apache
 	url = git+ssh://git@git.dev.inuits.be:2222/puppet-modules/apache.git
+[submodule "modules/jmxtrans"]
+	path = modules/jmxtrans
+	url = git://github.com/KrisBuytaert/puppet-jmxtrans.git
