--- a/.gitmodules
+++ b/.gitmodules
@@ -27,10 +27,10 @@
 	url = git://github.com/simonsd/puppet-ruby.git
 [submodule "modules/tmpwatch"]
 	path = modules/tmpwatch
-	url = http://github.com/KrisBuytaert/puppet-tmpwatch/
+	url = git@github.com:KrisBuytaert/puppet-tmpwatch.git
 [submodule "modules/gdash"]
 	path = modules/gdash
-	url = git:@github.com:KrisBuytaert/puppet-gdash.git
+	url = git@github.com:KrisBuytaert/puppet-gdash.git
 [submodule "modules/apache"]
 	path = modules/apache
 	url = git://github.com/Inuits/puppet-apache.git
